--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>lekcja2</artifactId>
+    <artifactId>monday</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>lekcja2</name>
-    <description>lekcja2</description>
+    <name>monday</name>
+    <description>monday</description>
     <properties>
         <java.version>17</java.version>
     </properties>
